Styling fix for header and icons on Safari

--- a/src/components/SocialMedia.css
+++ b/src/components/SocialMedia.css
@@ -18,6 +18,6 @@
 }
 
 .socialMedia__item {
-    font-size: xxx-large;
+    font-size: 3.5em;
     color: white;
 }
