--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -2,5 +2,5 @@
     text-align: center;
     color: #FCAE49;
     font-family: Muli, Roboto, sans-serif;
-    font-size: xxx-large;
+    font-size: 3.5em;
 }
